server/src/main/java/com/example/server/utils/errors/dto/ResponseError.java
package com.example.server.utils.errors.dto;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class ResponseError {
    private String errorType;
    private String message;
}
